--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   get: ^4.1.4
   get_storage: ^1.1.6
   flutter_svg: ^0.22.0
+  custom_navigator:
+    git:
+      url: https://github.com/kjawadDeveloper/Custom-navigator.git
   video_player:
 
 dev_dependencies:
