--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio_cookie_manager: ^2.0.0
+  cached_network_image: ^2.5.0
+  cookie_jar: ^3.0.1
+  url_launcher: ^6.0.5
   get: ^4.1.4
   get_storage: ^1.1.6
   flutter_svg: ^0.22.0
+  dio: ^4.0.0
   custom_navigator:
     git:
       url: https://github.com/kjawadDeveloper/Custom-navigator.git
