--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     git:
       url: https://github.com/kjawadDeveloper/Custom-navigator.git
   video_player:
+  path_provider: ^1.6.28
 
 dev_dependencies:
   flutter_test:
