--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.first_priority_app">
    <application
-        android:label="first_priority_app"
+        android:label="First Priority"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
