--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^4.0.0
   path_provider: ^1.6.28
   intl: ^0.17.0
+  video_player: ^2.1.5
+  search_page: ^2.0.0+1
   
 
 dev_dependencies:
