--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,8 @@ dependencies:
   path_provider: ^1.6.28
   intl: ^0.17.0
   video_player: ^2.1.5
-  search_page: ^2.0.0+1
+  flutter_typeahead: ^2.0.0
   
-
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_test:
