--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.17.0
   video_player: ^2.1.5
   flutter_typeahead: ^2.0.0
+  firebase_core: ^0.7.0
+  firebase_messaging: ^8.0.0-dev.15
   
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
