--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_typeahead: ^2.0.0
   firebase_core: ^0.7.0
   firebase_messaging: ^8.0.0-dev.15
+  provider: ^5.0.0
+  shared_preferences: ^0.5.12+4
+  mask_text_input_formatter: ^2.0.0
   
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
