General UI Polish

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^1.6.28
   intl: ^0.17.0
   video_player: ^2.1.5
+  chewie: ^1.2.2
   firebase_core: ^0.7.0
   firebase_messaging: ^8.0.0-dev.15
   provider: ^5.0.0
