--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^5.0.0
   shared_preferences: ^0.5.12+4
   mask_text_input_formatter: ^2.0.0
+  hexcolor: ^2.0.4
   
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
