--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@
 name: first_priority_app
 description: "The official First Priority of South Florida App"
 publish_to: 'none'
-version: 1.0.0+3
+version: 1.0.0+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   mask_text_input_formatter: ^2.0.0
   hexcolor: ^2.0.4
+  flutter_speed_dial: ^3.0.5
   
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
