--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   mask_text_input_formatter: ^2.0.0
   hexcolor: ^2.0.4
   flutter_speed_dial: ^3.0.5
+  flutter_local_notifications: ^4.0.1+2
   
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
