--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   hexcolor: ^2.0.4
   flutter_speed_dial: ^3.0.5
   flutter_local_notifications: ^4.0.1+2
+  syncfusion_flutter_pdfviewer: 18.4.49-beta
   
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
