--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_speed_dial: ^3.0.5
   flutter_local_notifications: ^4.0.1+2
   syncfusion_flutter_pdfviewer: 18.4.49-beta
+  confirm_dialog: ^1.0.0
   
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
