--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@
 name: first_priority_app
 description: "The official First Priority of South Florida App"
 publish_to: 'none'
-version: 1.0.2+9
+version: 1.0.3+10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -34,6 +34,7 @@ dependencies:
   flutter_local_notifications: ^4.0.1+2
   syncfusion_flutter_pdfviewer: 18.4.49-beta
   confirm_dialog: ^1.0.0
+  package_info: ^2.0.2
   
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
