--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@
 name: first_priority_app
 description: "The official First Priority of South Florida App"
 publish_to: 'none'
-version: 1.0.4+11
+version: 1.0.5+12
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -10,10 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  month_picker_dialog: ^0.3.3
   dio_cookie_manager: ^2.0.0
   cached_network_image: ^2.5.0
   cookie_jar: ^3.0.1
@@ -35,7 +32,10 @@ dependencies:
   syncfusion_flutter_pdfviewer: 18.4.49-beta
   confirm_dialog: ^1.0.0
   package_info: ^2.0.2
-  
+  sembast: ^3.1.2
+  path: ^1.8.0
+
+
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_test:
