--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>791409646526-gcvnd6tba6fgbjmofq0jtvr2gpvs83f1.apps.googleusercontent.com</string>
+	<string>791409646526-h736k7mjv8jevmt7ijgthrtpjp6ls39c.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.791409646526-gcvnd6tba6fgbjmofq0jtvr2gpvs83f1</string>
+	<string>com.googleusercontent.apps.791409646526-h736k7mjv8jevmt7ijgthrtpjp6ls39c</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCXXgKoxq81iTTYiQtUisdIyG8T7up7VqU</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>app.digitalchurch.firstpriority</string>
+	<string>app.firstpriority.national</string>
 	<key>PROJECT_ID</key>
 	<string>first-priority-app-f8bfb</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:791409646526:ios:fce7f06fbe8e03466b77ef</string>
+	<string>1:791409646526:ios:e5ee1c496d4b14286b77ef</string>
 </dict>
 </plist>
