--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   package_info: ^2.0.2
   sembast: ^3.1.2
   path: ^1.8.0
+  flutter_dotenv: ^5.0.2
 
 
 dev_dependencies:
@@ -60,7 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 
   assets:
-  - assets/images/
+    - assets/images/
+    - release.env
+    - debug.env
 
   fonts:
     - family: Schyler
